fix(button): labeled icon buttons have wrong margin
A labeled icon button got a wrong margin especially when used for multiple dropdown buttons as the specificity changed in #1571

However labeled icon buttons are never supposed to be displayed without text so the selector for single icon buttons should not select labeled buttons.

--- a/src/definitions/elements/button.less
+++ b/src/definitions/elements/button.less
@@ -735,7 +735,7 @@
 ---------------*/
 
 .ui.icon.buttons .button,
-.ui.icon.button:not(.animated):not(.compact) {
+.ui.icon.button:not(.animated):not(.compact):not(.labeled) {
   padding: @verticalPadding @verticalPadding ( @verticalPadding + @shadowOffset );
 }
 .ui.animated.icon.button > .content > .icon,
